varnish/tests/fail/error_event.stderr
error: Only one event handler is allowed
 --> tests/fail/error_event.rs:7:12
  |
7 |     pub fn event_fn2() {}
  |            ^^^^^^^^^
